--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.87.0",
     "swiper": "^11.2.6",
     "vanilla-tilt": "^1.8.1",
     "web-vitals": "^2.1.4"
