--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
